syntax = "proto3";

package sisyphus.test.showcase;

option java_package = "com.bybutter.sisyphus.test.showcase";

service ShowcaseApi {
  rpc Echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse{
  string message = 1;
}